dev/k8s/web-application-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-application-service
  #namespace: default
  labels:
    app: web-application
spec:
  ports:
  # port=available to other containers
  - port: 5000
    name: http
    # targetPort=exposed from inside container
    targetPort: 5000
    protocol: TCP
  selector:
    app: web-application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-application 
  name: web-application 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
    spec:
      containers:
      - image: brentgroves/api1:1 
        name: web-application
        imagePullPolicy: Always        
        resources:
          limits:
            cpu: "0.3"
            memory: "512Mi"
          requests:
            cpu: "0.3"
            memory: "256Mi"
