dev/k8s/web-application-ingress-unsecure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application-service-unsecure
  #namespace: default  
  annotations:
    # https://github.com/ubuntu/microk8s/issues/2035
    kubernetes.io/ingress.class: public # was 'nginx' before microk8s 1.20
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/hotel"
        backend:
          service:
            name: web-application-service
            port:
              number: 5000
