dev/k8s/webapplication.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-application 
  name: web-application 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
    spec:
      containers:
      - image: <image-name:image-tag > 
        name: web-application
        imagePullPolicy: Always        
        resources:
          limits:
            cpu: "0.3"
            memory: "512Mi"
          requests:
            cpu: "0.3"
            memory: "256Mi"
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-application
            port:
              number: 80
